--- a/content/dataset/SUBJ/subjectCommentsSubfamilia.yaml
+++ b/content/dataset/SUBJ/subjectCommentsSubfamilia.yaml
@@ -91,9 +91,9 @@ query_unified:  &query_unified
                           "Categoria_Seccion", "Categoria_Grupo",
                           "Categoria_Familia", "Categoria_Subfamilia",
                           "Archivo_Imagen" ]
-    query.post:         [ "dataset.lib.tmkArticulos.fixTitle",
-                          "dataset.lib.tmkArticulos.calcImages",
-                          "dataset.lib.tmkArticulos.calcURL" ]
+    query.post:         [ "tmklib.fixes.PROD.title",
+                          "tmklib.fixes.PROD.calcImages",
+                          "tmklib.url.PROD" ]
 
 
 
@@ -146,8 +146,8 @@ query.key:          [ "SubjectId" ]
 query.columns:      [ "EntityType", "EntityId", "SubjectId", "Title", "LinkBase",
                       "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
                       "Categoria_Subfamilia", "Subtype" ]
-query.post:         [ "dataset.lib.tmkSubjects.fixTitle",
-                      "dataset.lib.tmkSubjects.calcURL"
+query.post:         [ "tmklib.fixes.SUBJ.title",
+                      "tmklib.url.SUBJ"
                     ]
 query.augment:
     Comments:
