--- a/content/dataset/PAGE/homeMain.yaml
+++ b/content/dataset/PAGE/homeMain.yaml
@@ -41,7 +41,7 @@ query_main:     &query_main
                 E.Nombre                        AS ImprintName,
                 NULL                            AS ImprintURL,
                 -------------- Ranking
-                MVS.Orden                       AS Ranking,
+                CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
                 -------------- Publishing Date
                 '00'                            AS PublishingDateFormat,
                 'ONIX.55'                       AS PublishingDateFormat_list,
