--- a/content/dataset/SUBJ/subjectMainGrupo.yaml
+++ b/content/dataset/SUBJ/subjectMainGrupo.yaml
@@ -45,7 +45,7 @@ query_products_main:     &query_products_main
                         E.Nombre                        AS ImprintName,
                         NULL                            AS ImprintURL,
                         -------------- Ranking
-                        MVS.Orden                       AS Ranking,
+                        CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
                         -------------- Publishing Date
                         '00'                            AS PublishingDateFormat,
                         'ONIX.55'                       AS PublishingDateFormat_list,
@@ -391,7 +391,7 @@ query_showcase_main:     &query_showcase_main
                         E.Nombre                        AS ImprintName,
                         NULL                            AS ImprintURL,
                         -------------- Ranking
-                        MVS.Orden                       AS Ranking,
+                        CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
                         -------------- Publishing Date
                         '00'                            AS PublishingDateFormat,
                         'ONIX.55'                       AS PublishingDateFormat_list,
