Several fixes to code, datasets and template slider macro (ranking is now a string)

--- a/content/dataset/PAGE/homeMain.yaml
+++ b/content/dataset/PAGE/homeMain.yaml
@@ -41,7 +41,7 @@ query_main:     &query_main
                 E.Nombre                        AS ImprintName,
                 NULL                            AS ImprintURL,
                 -------------- Ranking
-                CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
+                TO_CHAR(MVS.Orden, '9999999')   AS Ranking,
                 -------------- Publishing Date
                 '00'                            AS PublishingDateFormat,
                 'ONIX.55'                       AS PublishingDateFormat_list,
@@ -263,7 +263,8 @@ augment_query_authors:  &augment_query_authors
                         'ONIX.17'                   AS ContributorRole_list,
                         CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                         AU.Id_Autor                 AS ContributorId,
-                        AU.Descripcion              AS ContributorName,
+                        COALESCE(AU.Descripcion2, AU.Descripcion)
+                                                    AS ContributorName,
                         NULL                        AS ContributorURL,
                         -------------- support attributes
                         A.Categoria_Seccion         AS Categoria_Seccion
