--- a/content/dataset/PROD/productMain.yaml
+++ b/content/dataset/PROD/productMain.yaml
@@ -43,7 +43,8 @@ augment_products_authors:  &augment_products_authors
                             'ONIX.17'                   AS ContributorRole_list,
                             CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                             AU.Id_Autor                 AS ContributorId,
-                            AU.Descripcion              AS ContributorName,
+                            COALESCE(AU.Descripcion2, AU.Descripcion)
+                                                        AS ContributorName,
                             NULL                        AS ContributorURL,
                             -------------- support attributes
                             A.Categoria_Seccion         AS Categoria_Seccion
@@ -248,7 +249,7 @@ query.sql:          >
             E.Nombre                        AS ImprintName,
             NULL                            AS ImprintURL,
             -------------- Ranking
-            CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
+            TO_CHAR(MVS.Orden, '9999999')   AS Ranking,
             -------------- Publishing Date
             '00'                            AS PublishingDateFormat,
             'ONIX.55'                       AS PublishingDateFormat_list,
