--- a/content/dataset/PROD/productRelated.yaml
+++ b/content/dataset/PROD/productRelated.yaml
@@ -80,7 +80,8 @@ augment_query_related_authors:  &augment_query_related_authors
                             'ONIX.17'                   AS ContributorRole_list,
                             CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                             AU.Id_Autor                 AS ContributorId,
-                            AU.Descripcion              AS ContributorName,
+                            COALESCE(AU.Descripcion2, AU.Descripcion)
+                                                        AS ContributorName,
                             NULL                        AS ContributorURL,
                             -------------- support attributes
                             A.Categoria_Seccion         AS Categoria_Seccion
@@ -191,7 +192,7 @@ query_unified:  &query_unified
                             E.Nombre                        AS ImprintName,
                             NULL                            AS ImprintURL,
                             -------------- Ranking
-                            CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
+                            TO_CHAR(MVS.Orden, '9999999')   AS Ranking,
                             -------------- Publishing Date
                             '00'                            AS PublishingDateFormat,
                             'ONIX.55'                       AS PublishingDateFormat_list,
