--- a/content/dataset/SUBJ/subjectDataSubfamilia.yaml
+++ b/content/dataset/SUBJ/subjectDataSubfamilia.yaml
@@ -45,7 +45,7 @@ query_products_main:     &query_products_main
                         E.Nombre                        AS ImprintName,
                         NULL                            AS ImprintURL,
                         -------------- Ranking
-                        CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
+                        TO_CHAR(MVS.Orden, '9999999')   AS Ranking,
                         -------------- Publishing Date
                         '00'                            AS PublishingDateFormat,
                         'ONIX.55'                       AS PublishingDateFormat_list,
@@ -294,7 +294,8 @@ augment_query_products_authors:  &augment_query_products_authors
                             'ONIX.17'                   AS ContributorRole_list,
                             CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                             AU.Id_Autor                 AS ContributorId,
-                            AU.Descripcion              AS ContributorName,
+                            COALESCE(AU.Descripcion2, AU.Descripcion)
+                                                        AS ContributorName,
                             NULL                        AS ContributorURL,
                             -------------- support attributes
                             A.Categoria_Seccion         AS Categoria_Seccion
@@ -399,7 +400,7 @@ query_showcase_main:     &query_showcase_main
                         E.Nombre                        AS ImprintName,
                         NULL                            AS ImprintURL,
                         -------------- Ranking
-                        CAST(MVS.Orden AS NUMBER(10))   AS Ranking,
+                        TO_CHAR(MVS.Orden, '9999999')   AS Ranking,
                         -------------- Publishing Date
                         '00'                            AS PublishingDateFormat,
                         'ONIX.55'                       AS PublishingDateFormat_list,
@@ -646,7 +647,8 @@ augment_query_showcase_authors:  &augment_query_showcase_authors
                             'ONIX.17'                   AS ContributorRole_list,
                             CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                             AU.Id_Autor                 AS ContributorId,
-                            AU.Descripcion              AS ContributorName,
+                            COALESCE(AU.Descripcion2, AU.Descripcion)
+                                                        AS ContributorName,
                             NULL                        AS ContributorURL,
                             -------------- support attributes
                             A.Categoria_Seccion         AS Categoria_Seccion
