Minor fixes to dataset and templates

--- a/content/dataset/PROD/productMain.yaml
+++ b/content/dataset/PROD/productMain.yaml
@@ -367,7 +367,7 @@ query.sql:          >
                     A.Id_Articulo = MVS.Id_Articulo
         -------------- Disponibilidades
         INNER JOIN  Disponibilidades D
-            ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
+            ON      NVL(A.Id_Disponibilidad, 1) = D.Id_Disponibilidad AND
                     -------------- ***** CONDITION
                     D.Id_Esquema = 'PROD'
         -------------- Product Form
