--- a/content/dataset/SUBJ/subjectDataSeccion.yaml
+++ b/content/dataset/SUBJ/subjectDataSeccion.yaml
@@ -285,8 +285,8 @@ augment_query_products_authors:  &augment_query_products_authors
                             'ONIX.17'                   AS ContributorRole_list,
                             CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                             AU.Id_Autor                 AS ContributorId,
-                            COALESCE(AU.Descripcion2, AU.Descripcion)
-                                                        AS ContributorName,
+                            AU.Descripcion              AS ContributorName,
+                            AU.Descripcion2             AS ContributorName2,
                             NULL                        AS ContributorURL,
                             -------------- support attributes
                             A.Categoria_Seccion         AS Categoria_Seccion
@@ -333,8 +333,8 @@ augment_query_products_authors:  &augment_query_products_authors
     query.group:        [ "ProductId" ]
     query.columns:      [ "ProductId", "EntryOrder",
                           "ContributorRole", "ContributorRole_list", "ContributorRole_desc",
-                          "ContributorId", "ContributorName", "ContributorURL",
-                          "Categoria_Seccion" ]
+                          "ContributorId", "ContributorName", "ContributorName2",
+                          "ContributorURL", "Categoria_Seccion" ]
     query.post:         [ "tmklib.fixes.CONT.title",
                           "tmklib.url.CONT"
                         ]
@@ -629,8 +629,8 @@ augment_query_showcase_authors:  &augment_query_showcase_authors
                             'ONIX.17'                   AS ContributorRole_list,
                             CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                             AU.Id_Autor                 AS ContributorId,
-                            COALESCE(AU.Descripcion2, AU.Descripcion)
-                                                        AS ContributorName,
+                            AU.Descripcion              AS ContributorName,
+                            AU.Descripcion2             AS ContributorName2,
                             NULL                        AS ContributorURL,
                             -------------- support attributes
                             A.Categoria_Seccion         AS Categoria_Seccion
@@ -680,8 +680,8 @@ augment_query_showcase_authors:  &augment_query_showcase_authors
     query.group:        [ "ProductId" ]
     query.columns:      [ "ProductId", "EntryOrder",
                           "ContributorRole", "ContributorRole_list", "ContributorRole_desc",
-                          "ContributorId", "ContributorName", "ContributorURL",
-                          "Categoria_Seccion" ]
+                          "ContributorId", "ContributorName", "ContributorName2",
+                          "ContributorURL", "Categoria_Seccion" ]
     query.post:         [ "tmklib.fixes.CONT.title",
                           "tmklib.url.CONT"
                         ]
