--- a/content/dataset/PAGE/homeMain.yaml
+++ b/content/dataset/PAGE/homeMain.yaml
@@ -263,8 +263,8 @@ augment_query_authors:  &augment_query_authors
                         'ONIX.17'                   AS ContributorRole_list,
                         CGRF_Role.RV_Meaning        AS ContributorRole_desc,
                         AU.Id_Autor                 AS ContributorId,
-                        COALESCE(AU.Descripcion2, AU.Descripcion)
-                                                    AS ContributorName,
+                        AU.Descripcion              AS ContributorName,
+                        AU.Descripcion2             AS ContributorName2,
                         NULL                        AS ContributorURL,
                         -------------- support attributes
                         A.Categoria_Seccion         AS Categoria_Seccion
@@ -299,8 +299,8 @@ augment_query_authors:  &augment_query_authors
     query.group:        [ "ProductId" ]
     query.columns:      [ "ProductId", "EntryOrder",
                           "ContributorRole", "ContributorRole_list", "ContributorRole_desc",
-                          "ContributorId", "ContributorName", "ContributorURL",
-                          "Categoria_Seccion" ]
+                          "ContributorId", "ContributorName", "ContributorName2",
+                          "ContributorURL", "Categoria_Seccion" ]
     query.post:         [ "tmklib.fixes.CONT.title",
                           "tmklib.url.CONT"
                         ]
